# fsv

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
public/: icon.js  icon.ts
src/: error.rs  handlers.rs  lib.rs  main.rs  server.rs  types.rs  unified.rs  util.rs  webdav.rs  ws.rs
ui/: api.ts  app.css  app.tsx  hashRoute.ts  icons.tsx  index.css  main.tsx  theme.ts  types.ts
ui/components/: FileCard.tsx  Header.tsx  PreviewModal.tsx  QrModal.tsx  SettingsModal.tsx  WsToast.tsx
ui/hooks/: useFileList.ts  useWebSocket.ts
