[package]
name = "fsv"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"], optional = true }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
local-ip-address = "0.6"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tokio-tungstenite = "0.29"

[features]
default = ["cli"]
cli = ["dep:clap"]

[[bin]]
required-features = ["cli"]
name = "fsv"
