[package]
name = "fsv"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "fsv"
repository = "https://github.com/ahaoboy/fsv"
homepage = "https://github.com/ahaoboy/fsv"
authors = ["ahaoboy"]
include = ["/src/**/*", "/dist/**/*", "/Cargo.toml", "/build.rs", "/README.md"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive"], optional = true }
qr2term = { version = "0.3", optional = true }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
percent-encoding = "2"
local-ip-address = "0.6"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
find_port = "0.1"
httpdate = "1"
webdav-serde = "0.1"
open = { version = "5", optional = true }

[dev-dependencies]
tokio-tungstenite = "0.29"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:qr2term", "dep:open"]

[[bin]]
required-features = ["cli"]
name = "fsv"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
